test/pass/internal/lambda_save_restore.lly
class Box[A](input: A)
{
    var @input = input
}

var v =
    {||
        {||
            Box::new(
                {|| 1}
            )
        }
    }

v()()
