test/fail/classes/class_property_redecl.lly
#[
SyntaxError: Property a already exists in class ABC.
    from class_property_redecl.lly:6
]#

class ABC { var @a = 1 var @a = 1 }
